google oauth20 and one tap added

--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -11,6 +11,10 @@
             content="CodeChamp is an online platform where you can enhance your coding skills with various problems, competitions, and tutorials."
         />
 
+        <!--google one tap for google sign in-->
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+
         <!-- Open Graph Tags for Social Sharing -->
         <meta property="og:title" content="CodeChamp - Master Coding Problems Online" />
         <meta
